# vrtx

./: Dockerfile  Dockerfile.python  README.md  docker-compose.yml  init.sql  requirements.txt
api/: README.md  cluster_handler.go  go.mod  go.sum  k8s_client.go  main.go  types.go
app/: globals.css  layout.tsx  next.config.js  package.json  page.tsx  tailwind.config.js
app/api/predictions/: route.ts
app/api/resources/: route.ts
app/api/scaling/: route.ts
app/lib/: prediction-engine.py
directive/: Infra.md
lib/: auto-scaler.ts
pytorch/: README.md  pyproject.toml
pytorch/app/: db.py  main.py  predictor.py  schemas.py
services/api/: scaling_handler.go  types.go
services/pytorch/: ml.md
services/pytorch/app/: db.py  schemas.py
services/pytorch/app/models/: ensemble.py  lstm_model.py  prophet_model.py
services/pytorch/app/services/: failure_detector.py  predictor.py
services/scala/: .env.example  readme.md
services/scala/src/: db.rs  decision.rs  main.rs  models.rs
services/scala/src/cloudflare/: aws.rs  kubernetes.rs  mod.rs
types/: index.ts
